add action  bảng điểm

--- a/UPES3/UPES3.Data/UPES3.Data.csproj
+++ b/UPES3/UPES3.Data/UPES3.Data.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Access\statement.cs" />
     <Compile Include="Access\type.cs" />
     <Compile Include="LogicLayer\AdminDLL.cs" />
+    <Compile Include="LogicLayer\ClassityDLL.cs" />
     <Compile Include="LogicLayer\HashMD5.cs" />
     <Compile Include="LogicLayer\Login.cs" />
     <Compile Include="LogicLayer\NotificationDLL.cs" />
