--- a/UPES3/UPES3/UPES3.csproj
+++ b/UPES3/UPES3/UPES3.csproj
@@ -138,6 +138,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -245,6 +246,7 @@
     <Content Include="Views\Home\Notifications.cshtml" />
     <Content Include="Views\Home\DetailNotification.cshtml" />
     <Content Include="Views\Home\Classity.cshtml" />
+    <Content Include="Views\Account\Info.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
